# Resume-Eval

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  config.py  docker-compose.yml  main.py  models.py  pyproject.toml  session_store.py  settings_store.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/dashboard/: Dashboard.tsx  ExportButton.tsx  OverviewCards.tsx  ResumeTable.tsx
frontend/src/components/layout/: SettingsModal.tsx  TopBar.tsx
frontend/src/components/shared/: FileDropzone.tsx  ProgressBar.tsx  Skeleton.tsx  Toast.tsx
frontend/src/components/steps/: StepSetup.tsx  StepUploadProcess.tsx
frontend/src/store/: useEvalStore.ts  useSettingsStore.ts  useToastStore.ts
frontend/src/types/: index.ts
routers/: batches.py  evaluation.py  kpi.py  results.py  sessions.py  settings.py  suites.py  upload.py
services/: batch_store.py  csv_utils.py  evaluation_engine.py  file_parser.py  llm_service.py  scoring.py  suite_store.py
