[project]
name = "resume-eval"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "pymongo>=4.9",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
